fixed notes creating
